...
            android:textAlignment="center"
            ></TextView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/albumsRv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/album_item"
            android:layout_marginBottom="60dp"/>
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
...
