...
                        android:layout_height="80dp"
                        android:layout_marginStart="10dp"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="0dp"
                        android:layout_marginBottom="15dp">
                        <ImageView
                            android:id="@+id/imageDetail"
                            android:layout_width="match_parent"
                            android:layout_centerHorizontal="true"
                            android:layout_height="match_parent"
                            android:layout_marginTop="0dp"
                            android:scaleType="fitXY"
                            app:imageDetail="@{artist.image}"
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="3dp"
                            android:textColor="#000000"
                            android:textSize="20sp"
                            android:textStyle="bold"
...
